--- a/src/_global-css/modules/typography.css
+++ b/src/_global-css/modules/typography.css
@@ -1,7 +1,6 @@
 body,
 .default-paragraph,
-.col-1,
-.col-2 {
+.row {
     color: #333333;
     font-size: 16px;
     line-height: 24px;
